#3 Bug: tip percentage button wrong colors
#3 closed

--- a/react-tip-calculator/src/App.css
+++ b/react-tip-calculator/src/App.css
@@ -118,13 +118,18 @@ p {
 }
 
 .ui__tipPercentage--container > button {
-  color: white;
+  color: #028577;
   font-weight: bold;
   letter-spacing: .1em;
   height: 50%;
   padding: 0px 20px;
   border-radius: 10px;
   border: none;
+  background-color: white;
+}
+
+.ui__tipPercentage--container > button:hover {
+  color: white;
   background-color: #028577;
 }
 
